--- a/til_old/2024/TIL_202407.md
+++ b/til_old/2024/TIL_202407.md
@@ -209,7 +209,7 @@
   - '컴퓨터 밑바닥의 비밀'
     - 2장 2~3절 읽음
 - AWS DVA-C02 강의 학습
-  - 섹션 16: ECS, ECR 및 Fargate - AWS의 도커
+  - 섹션 17: AWS Elastic Beanstalk
     - 186~188강
 - Webflux 학습
   - 패스트 캠퍼스 '시그니처 백엔드 Path 초격차 패키지 Online.'
