cursor rule: git add .로 전체 수정 파일 add 명시

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -7,7 +7,7 @@
 
 2. **push 요청 처리**
    - 사용자가 "push 해줘", "커밋하고 푸시해줘" 등으로 요청하면,
-     1. 변경된 파일을 git add 한다.
+     1. 변경된 파일을 git add 한다. (이때, 전체 수정된 파일을 모두 add 하기 위해 `git add .` 명령어를 사용한다.)
      2. 위에서 제안한 커밋 메시지로 git commit 한다.
      3. git push로 원격 저장소에 반영한다.
    - 파일 경로가 다를 수 있으니, 실제 변경된 파일명을 자동으로 감지하여 add/commit/push 한다.
