TIL: 2/4 Swing Filter 작업 추가, 토이프로젝트 이모지 📈로 통일

--- a/til_old/TIL_202601.md
+++ b/til_old/TIL_202601.md
@@ -322,7 +322,7 @@
 >   - **인프런** _AI 다루는 백엔드 설계 기본 - SpringBoot SNS 편_
 >       - 섹션 2. 17~18강 학습
 
-> **💬 토이프로젝트 : Swing Filter**
+> **📈 토이프로젝트 : Swing Filter**
 >   - 주식 퀀트 연습용 프로젝트
 >   - 데이터 수집 기능 구현 (pykrx 사용)
 
